# custom-docker-images

./: .dockerignore  .gitattributes  .gitignore  README.md
.github/workflows/: build.yml
docker_files/python/duckdb/: Dockerfile  Dockerfile_pip  Dockerfile_uv  pyproject.toml  requirements.txt
docker_files/python/duckdb/scripts/: install_duckdb_extensions.py  test.py
